--- a/src/app/_layout/nav-bar.html
+++ b/src/app/_layout/nav-bar.html
@@ -5,20 +5,20 @@
     </a>
     <ul class="left hide-on-med-and-down">
       <li class="active">
-        <a href="/home/math">
+        <a href="/home">
           <i class="fa fa-book icon_of_menu_holizontal" aria-hidden="true"></i> Môn Học</a>
       </li>
-      <li>
+      <!-- <li>
         <a href="/progess/?subject=math">
           <i class="fa fa-bar-chart icon_of_menu_holizontal" aria-hidden="true"></i> Tiến Trình</a>
-      </li>
+      </li> -->
       <li>
         <a href="{{ router.url('get:all:news') }}">
           <i class="fa fa-newspaper-o icon_of_menu_holizontal" aria-hidden="true"></i> Tin Tức</a>
       </li>
       <li>
-        <a href="#">
-          <i class="fa fa-commenting icon_of_menu_holizontal" aria-hidden="true"></i> Diễn đàn</a>
+        <a href="{{ router.url('get:chat-room') }}">
+          <i class="fa fa-commenting icon_of_menu_holizontal" aria-hidden="true"></i> Phòng trò chuyện</a>
       </li>
     </ul>
     <div class="right" style="max-height:100%">
@@ -27,7 +27,7 @@
         <i class="fa fa-caret-down dropdown-button" aria-hidden="true" data-beloworigin="true" data-activates='dropdown' style="height:15px"></i>
         <ul class='dropdown-content' id='dropdown'>
           <li>
-            <a href="/logout">Logout</a>
+            <a href="/logout">Đăng xuất</a>
           </li>
         </ul>
       </span>
@@ -37,17 +37,17 @@
         <a href="/home/math">
           <i class="fa fa-book icon_of_menu_holizontal" aria-hidden="true"></i> Môn Học</a>
       </li>
-      <li>
+      <!-- <li>
         <a href="/progess/?subject=math">
           <i class="fa fa-bar-chart icon_of_menu_holizontal" aria-hidden="true"></i> Tiến Trình</a>
-      </li>
+      </li> -->
       <li>
         <a href="{{ router.url('get:all:news') }}">
           <i class="fa fa-newspaper-o icon_of_menu_holizontal" aria-hidden="true"></i> Tin Tức</a>
       </li>
       <li>
-        <a href="#">
-          <i class="fa fa-commenting icon_of_menu_holizontal" aria-hidden="true"></i> Diễn đàn</a>
+        <a href="{{ router.url('get:chat-room') }}">
+          <i class="fa fa-commenting icon_of_menu_holizontal" aria-hidden="true"></i> Phòng trò chuyện</a>
       </li>
     </ul>
   </div>
