--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -2,38 +2,15 @@
 
 {% block content %}
   <div class="parallax-container index-banner">
-    <div class="section">
-      <div class="container">
-        <br>
-        <br>
-        <h1 class="header center white-text">Luyện Thi Đại Học</h1>
-        <div class="row center ">
-          <h5 class="header col s12 white-text">Cùng bạn chinh phục kì thi đại học</h5>
-        </div>
-        <div class="row center">
-          <div class="col s4">
-            <i class="material-icons turned_in">turned_in</i>
-            <h6 class="center white-text">Chúng tôi sẽ giúp bạn nâng cao kĩ năng làm bài và đạt được kết quả tốt nhất trong kì thi đại học</h5>
-          </div>
-          <div class="col s4">
-            <i class="material-icons turned_in">turned_in</i>
-            <h6 class="center white-text">Chúng tôi sẽ giúp bạn nâng cao kĩ năng làm bài và đạt được kết quả tốt nhất trong kì thi đại học</h5>
-          </div>
-          <div class="col s4">
-            <i class="material-icons turned_in">turned_in</i>
-            <h6 class="center white-text">Chúng tôi sẽ giúp bạn nâng cao kĩ năng làm bài và đạt được kết quả tốt nhất trong kì thi đại học</h5>
-          </div>
-        </div>
-      </div>
-    </div>
+
     <div class="parallax">
-      <img src="/images/index-background.png">
+      <img src="/images/home.png">
     </div>
   </div>
   
   <div class="row container">
     <div class="col s12">
-      <h3 class="black-text center-align about_us">ABOUT US</h1>
+      <h3 class="black-text center-align about_us">VỀ BỌN MÌNH</h1>
     </div>
     <div class="col s12 m6">
       <div class="icon-block">
@@ -61,13 +38,8 @@
   </div>
   
   <div class="parallax-container index-banner">
-    <div class="container ">
-      <br>
-      <br>
-      <h1 class="white-text center ">Join With Us</h1>
-    </div>
     <div class="parallax ">
-      <img src="/images/index-picture-of-team.jpg " alt=" ">
+      <img src="/images/home1.jpeg" alt="Home2">
     </div>
   </div>
 {% endblock %}
