--- a/src/app/_layout/footer.html
+++ b/src/app/_layout/footer.html
@@ -1,29 +1,12 @@
 <div id="footer">
-  <footer class="page-footer white ">
-    <div class="container ">
-      <div class="row ">
-        <div class="col s6 ">
-          <h5 class="center ">Địa chỉ</h5>
-          <hr>
-          <p class="center ">Số 6, tổ 20, Phường Dịch Vọng Hậu, Cầu Giấy, Hà Nội</p>
-        </div>
-        <div class="col s6 ">
-          <h5 class="center ">Liên hệ</h5>
-          <hr>
-          <p class="center ">huymanhtmhp@gmail.com</p>
-        </div>
-      </div>
-    </div>
-  </footer>
-
   <footer class="page-footer light-blue lighten-1">
     <div class="container ">
       <div class="row ">
         <div class="col l6 s12 ">
-          <h5 class="white-text ">LuyenThiDaiHoc</h5>
+          <h5 class="white-text ">Thidaihoc.online</h5>
           <div class="row valign-wrapper ">
             <div class="col s2 ">
-              <img style="background: white; " src="/images/main_logo.png " class="circle responsive-img ">
+              <img style="background: white; " src="/images/logo.png " class="circle responsive-img ">
             </div>
             <div class="col s10 ">
               <span class="white-text ">
