--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -54,21 +54,17 @@ left: 0px;
 .quote{
   padding-left: 10px;
   margin-top: 2px;
-  border-radius: 5px;
-  border: 3px solid #4DB6AC;
 }
 
 #search{
   padding-left: 10px;
   margin-top: 2px;
-  border-radius: 5px;
-  border: 3px solid #4DB6AC;
 }
 
-#exams{
+/* #exams{
   border: 3px solid #4DB6AC;
   border-radius:  5px;
-}
+} */
 
 .icon_of_menu_holizontal{
   height: 100%;
